--- a/client/views/partials/tripSheets/tripSheet.html
+++ b/client/views/partials/tripSheets/tripSheet.html
@@ -162,11 +162,11 @@
                         <!--<button type="button" class="close" data-dismiss="modal">&times;</button>-->
 
                         <h4 class="modal-title col-sm-5"><b>Trip Sheet Report</b></h4>
-                        <!--<div class="pall-zero col-sm-5">-->
-                            <!--<b> <a href="#"-->
-                                   <!--ng-click="downloadTripSheetReport(tripSheets.registrationNo._id, fromDate, toDate );">Download-->
-                                <!--Report</a></b>-->
-                        <!--</div>-->
+                        <div class="pall-zero col-sm-5">
+                            <b> <a href="#"
+                                   ng-click="downloadTripSheetReport(tripSheets.registrationNo._id, fromDate, toDate );">Download
+                                Report</a></b>
+                        </div>
                         <div class="col-sm-2 pull-right">
                             <button type="button" class="close" data-dismiss="modal">&times;</button>
                         </div>
