--- a/client/views/partials/expenses/expensesSheet.html
+++ b/client/views/partials/expenses/expensesSheet.html
@@ -1,11 +1,11 @@
 <div class="mainRight col-xs-12" ng-controller="expensesSheetController">
     <div class="row">
         <div class="col-sm-3">
-            <h3>Expenses Sheet</h3>
+            <h3>Expenses Sheet{{truck.registrationNo}}</h3>
         </div>
         <div class="col-sm-9">
             <div class="col-sm-4">
-                <ui-select ng-model="expensesSheet.registrationNo" theme="select2"
+                <ui-select ng-model="truck.registrationNo" theme="select2"
                            title="Choose a person" append-to-body="true">
                     <ui-select-match placeholder=" Select a Truck" class="form-control">
                         {{$select.selected.registrationNo || registrationNo}}
@@ -69,42 +69,45 @@
     </div>
 
     <table class="table table-bordered table-striped table-condensed table-hover" >
-        <tr>
-            <th>S No</th>
+        <tr >
+            <th>S No {{expense.registrationNo}}</th>
             <th>Vehicle No</th>
             <th>From</th>
             <th>To</th>
             <th>Party</th>
+            <th>Driver Name</th>
             <th>Diesel Slip</th>
             <th>Diesel Amount</th>
             <th>Cash</th>
             <th>LR No</th>
             <th>Unloading Date</th>
-            <th>Driver Name</th>
             <th>Remarks</th>
         </tr>
-        <tr
-            style="text-align: center;">
-            <td class="col-sm-1">1</td>
-            <td class="col-sm-1">AP24AS9987</td>
-            <td class="col-sm-1">Hyderbad</td>
-            <td class="col-sm-1">Warangal</td>
-            <td class="col-sm-1">MYK Latecrete</td>
+        <tr style="text-align: center;" ng-repeat="expensesSheet in expensesSheetsDetails | filter:{vehicleNo: expensesSheet.registrationNo.registrationNo}">
+            <td>{{$index+1}}</td>
+            <td class="col-sm-1">{{expensesSheet.vehicleNo}}</td>
+            <td class="col-sm-1">{{expensesSheet.from}}</td>
+            <td class="col-sm-1">{{expensesSheet.to}}</td>
+            <td class="col-sm-1">{{expensesSheet.partyName}}</td>
+            <td> {{expensesSheet.driverName}}</td>
             <td class="col-sm-1">
                 <input type="text" class="form-control" ng-model="expensesSheet.dieselSlip">
             </td>
             <td>
-                <input type="text" class="form-control" ng-model="expensesSheet.dieselSlip">
+                <input type="text" class="form-control" ng-model="expensesSheet.dieselAmount">
             </td>
             <td >
-                <input type="text" class="form-control" ng-model="expensesSheet.dieselSlip">
+                <input type="text" class="form-control" ng-model="expensesSheet.cash">
             </td>
             <td>
-
+                <input type="text" class="form-control" ng-model="expensesSheet.LRnum">
             </td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td>
+                <input type="text" class="form-control" ng-model="expensesSheet.unloadingDate">
+            </td>
+            <td>
+                <input type="text" class="form-control" ng-model="expensesSheet.remarks">
+            </td>
         </tr>
     </table>
     <div class="center-block" style="width: 60%;">
