Expenses Sheet added

--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -154,8 +154,9 @@
             </tbody>
         </table>
     </div>
-    <div class="invoice_Container">
-        <div class="table1" ng-show="print">
+    <div class="invoice_Container" style="display: none;">
+       Invoice: {{invoice}}
+        <div class="table1">
             <table>
                 <tr class="print-style">
                     <th style="border:none">
@@ -176,8 +177,6 @@
                         <p>VIVEKANANDA NAGAR, KUKATPALLY</p>
                         <p>IFSC-HDFC0001639</p>
                         <p>CURRENT A/C.#16392000002774</p>
-
-
                     </th>
                 </tr>
             </table>
