--- a/client/views/partials/expenses/expensesSheet.html
+++ b/client/views/partials/expenses/expensesSheet.html
@@ -100,7 +100,7 @@
                 <input type="text" class="form-control" ng-model="expensesSheet.cash">
             </td>
             <td>
-                <input type="text" class="form-control" ng-model="expensesSheet.LRnum">
+                <input type="text" class="form-control" ng-model="expensesSheet.lrNo">
             </td>
             <td>
                 <input type="text" class="form-control" ng-model="expensesSheet.unloadingDate">
