added totals in Expesne Sheet

--- a/client/views/index.html
+++ b/client/views/index.html
@@ -150,13 +150,13 @@
                                         <div id="Transactions" class="panel-collapse collapse">
                                             <div class="panel-body custom-panel-body">
                                                 <left-menu label="Trips" ui-sref="trips"></left-menu>
-                                               <left-menu  ng-class="{hide:tripSheetEnabled === 'false'}" label="TripSheet" ui-sref="tripSheet"></left-menu>
-                                                <left-menu ng-class="{hide:driverSheetEnabled === 'false'}"  label="DriverSheet" ui-sref="driverSheet"></left-menu>
-                                                <left-menu label="ExpensesSheet" ui-sref="expensesSheet"></left-menu>
+                                               <left-menu  ng-class="{hide:tripSheetEnabled === 'false'}" label="TripSheet" ui-sref="tripsheet"></left-menu>
+                                                <left-menu ng-class="{hide:driverSheetEnabled === 'false'}"  label="DriverSheet" ui-sref="driversheet"></left-menu>
+                                                <left-menu label="ExpensesSheet" ui-sref="expensessheet"></left-menu>
                                                  <left-menu label="Receipts" ui-sref="receipts"></left-menu>
                                                 <left-menu label="Payments" ui-sref="payments"></left-menu>
                                           <left-menu label="LR" ui-sref="lrs"></left-menu>
-                                            <left-menu label="TripSettlement" ui-sref="tripSettlement"></left-menu>
+                                            <left-menu label="TripSettlement" ui-sref="tripsettlement"></left-menu>
                                             <left-menu label="Invoice" ui-sref="invoice"></left-menu>
                                         </div>
                                     </div>
