--- a/client/views/partials/Invoice/invoiceList.html
+++ b/client/views/partials/Invoice/invoiceList.html
@@ -1,4 +1,4 @@
-<div class="main-right col-xs-12" ng-controller="invoicesListController">
+<div class="main-right col-xs-12 invocie" ng-controller="invoicesListController">
     <div class="col-xs-12 pall-zero mb-10">
         <div class="col-sm-3 pall-zero">
 
