--- a/client/css/invoice.css
+++ b/client/css/invoice.css
@@ -1,4 +1,4 @@
-h3 {
+.invocie h3 {
     color: green;
     text-decoration: underline;
     text-align: left;
@@ -6,7 +6,7 @@ h3 {
     margin: 0%;
 }
 
-h6 {
+.invocie h6 {
     color: green;
     text-decoration: underline;
     text-align: left;
@@ -14,7 +14,7 @@ h6 {
     margin-bottom: 0%;
 }
 
-p {
+.invocie p {
     text-align: left;
     margin: 0%;
     font-size: 8PX;
@@ -36,8 +36,7 @@ p {
 
 
 }
-
-th,
+.invocie th,
 td {
     text-align: center;
     border: 1px solid black;
