--- a/client/views/partials/expenses/expensesSheet.html
+++ b/client/views/partials/expenses/expensesSheet.html
@@ -4,7 +4,7 @@
             <h3>Expenses Sheet{{truck.registrationNo}}</h3>
         </div>
         <div class="col-sm-9">
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <ui-select ng-model="truck.registrationNo" theme="select2"
                            title="Choose a person" append-to-body="true">
                     <ui-select-match placeholder=" Select a Truck" class="form-control">
@@ -32,6 +32,11 @@
                                 ng-click="validateFilters(expensesSheet.registrationNo._id, fromDate, toDate );"
                                 class="btn go" data-toggle="modal" data-target="#myModal">
                             <i class="fa fa-search sear" aria-hidden="true"></i>
+                        </button>
+                    </li>
+                    <li class="col-sm-1 pall-zero">
+                        <button type="button" ng-click="printArea( )" class="btn mailImage">
+                            <i class="fa fa-print fa-2x" aria-hidden="true"></i>
                         </button>
                     </li>
                 </ul>
@@ -67,7 +72,6 @@
             <button class="btn btn-primary" ng-click="saveAll()"> Save</button>
         </div>
     </div>
-
     <table class="table table-bordered table-striped table-condensed table-hover" >
         <tr >
             <th>S No {{expense.registrationNo}}</th>
